--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -70,6 +70,7 @@ publish_package:
     SSL_CERT_FILE: $IAV_CA_BUNDLE
   script:
     - ./scripts/ci_cd/setup_npm.sh
+    - export GIT_SSL_NO_VERIFY=1
     - |
       {
         npm run semantic-release
