--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -67,7 +67,8 @@ build_package:
 publish_package:
   stage: publish
   variables:
-    SSL_CERT_FILE: $IAV_CA_BUNDLE
+    SSL_CERT_FILE: ${IAV_CA_BUNDLE}
+    NPM_TOKEN: ${CI_JOB_TOKEN}
   script:
     - ./scripts/ci_cd/setup_npm.sh
     - export GIT_SSL_NO_VERIFY=1
