--- a/.releaserc
+++ b/.releaserc
@@ -1,3 +1,4 @@
 {
-    "branches": ["master", "develop"]
+    "branches": ["master", "develop"],
+    "extends": "@semantic-release/gitlab-config"
 }
