--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@babel/preset-typescript": "^7.12.1",
     "@semantic-release/git": "^9.0.0",
     "@semantic-release/gitlab": "^6.2.1",
+    "@semantic-release/gitlab-config": "^8.0.0",
     "@semantic-release/npm": "^7.1.3",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
