--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "build-linux": "./scripts/ci_cd/build.sh",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "semantic-release": "semantic-release"
+    "semantic-release": "semantic-release",
+    "lint": "eslint"
   },
   "publishConfig": {
     "access": "public"
