--- a/package.json
+++ b/package.json
@@ -50,9 +50,13 @@
     "disa-framework"
   ],
   "dependencies": {
+    "i18next": "^20.3.5",
+    "i18next-browser-languagedetector": "^6.1.2",
     "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
-    "primereact": "^6.2.1"
+    "primereact": "^6.2.1",
+    "react-cookie": "^4.0.3",
+    "react-i18next": "^11.11.4"
   },
   "peerDependencies": {
     "react": "^17.0.1",
