--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,11 +71,11 @@ publish_package:
   script:
     - ./scripts/ci_cd/setup_npm.sh
     - export GIT_SSL_NO_VERIFY=1
-    - echo $IAV_CA_BUNDLE
+    - echo $SSL_CERT_FILE
     - |
       {
         echo "IN"
-        echo $IAV_CA_BUNDLE
+        echo $SSL_CERT_FILE
         npm run semantic-release
         echo "Successfully published version ${NPM_PACKAGE_VERSION} of ${NPM_PACKAGE_NAME} to GitLab's NPM registry: ${CI_PROJECT_URL}/-/packages"
       } || {
