--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,8 +2,6 @@ default:
   image: node:latest
   before_script:
     - chmod -R +x ./scripts/ci_cd/
-  variables:
-    SSL_CERT_FILE: ${IAV_CA_BUNDLE}
 
 stages:
   - validate
@@ -67,11 +65,13 @@ build_package:
 publish_package:
   stage: publish
   variables:
+    SSL_CERT_FILE: ${IAV_CA_BUNDLE}
     NPM_TOKEN: ${CI_JOB_TOKEN}
   script:
     - ./scripts/ci_cd/setup_npm.sh
     - |
       {
+        npm install
         source npm run semantic-release
         echo "Successfully published version ${NPM_PACKAGE_VERSION} of ${NPM_PACKAGE_NAME} to GitLab's NPM registry: ${CI_PROJECT_URL}/-/packages"
       } || {
@@ -84,6 +84,8 @@ publish_package:
 # Create release so observer of this project will get a notification e-mail.
 create_release:
   stage: release
+  variables:
+    SSL_CERT_FILE: ${IAV_CA_BUNDLE}
   image: registry.gitlab.com/gitlab-org/release-cli:v0.6.0
   script:
     - apk add --update npm
