--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,8 +71,7 @@ publish_package:
     - ./scripts/ci_cd/setup_npm.sh
     - |
       {
-        npm install
-        source npm run semantic-release
+        source ./scripts/ci_cd/publish.sh
         echo "Successfully published version ${NPM_PACKAGE_VERSION} of ${NPM_PACKAGE_NAME} to GitLab's NPM registry: ${CI_PROJECT_URL}/-/packages"
       } || {
         echo "No new version of ${NPM_PACKAGE_NAME} published. This is most likely because version ${NPM_PACKAGE_VERSION} already exists in GitLab's NPM registry."
