--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -67,6 +67,7 @@ publish_package:
   variables:
     SSL_CERT_FILE: ${IAV_CA_BUNDLE}
     NPM_TOKEN: ${CI_JOB_TOKEN}
+    NODE_EXTRA_CA_CERTS: ${IAV_CA_BUNDLE}
   script:
     - source ./scripts/ci_cd/setup_npm.sh
     - git config --global http.sslCAinfo $IAV_CA_BUNDLE
