--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,4 +1,4 @@
 {
-    "branches": ["'+([0-9])?(.{+([0-9]),x}).x'"],
+    "branches": ["master, develop"],
     "extends": "@semantic-release/gitlab-config"
 }
