--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,4 +1,4 @@
 {
-    "branches": ["master, develop"],
+    "branches": ["master", "develop"],
     "extends": "@semantic-release/gitlab-config"
 }
