--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,6 +33,7 @@ validate_package_scope:
 create_npmrc:
   stage: validate
   script:
+    - echo ${CI_JOB_TOKEN}
     - |
       if [[ ! -f .npmrc ]]; then
         echo 'No .npmrc found! Creating one now. Please review the following link for more information: https://docs.gitlab.com/ee/user/packages/npm_registry/index.html#authenticating-with-a-ci-job-token'
@@ -41,6 +42,7 @@ create_npmrc:
         echo ${CI_PROJECT_ROOT_NAMESPACE}
         {
           echo @${CI_PROJECT_ROOT_NAMESPACE}:registry=${CI_SERVER_PROTOCOL}://${CI_SERVER_HOST}:${CI_SERVER_PORT}/api/v4/projects/${CI_PROJECT_ID}/packages/npm/
+          echo //${CI_SERVER_HOST}:${CI_SERVER_PORT}/api/v4/packages/npm/:_authToken=${CI_JOB_TOKEN}
           echo //${CI_SERVER_HOST}:${CI_SERVER_PORT}/api/v4/projects/${CI_PROJECT_ID}/packages/npm/:_authToken=${CI_JOB_TOKEN}
         } >> .npmrc
 
@@ -69,6 +71,7 @@ publish_package:
     NPM_TOKEN: ${CI_JOB_TOKEN}
     NODE_EXTRA_CA_CERTS: ${IAV_CA_BUNDLE}
   script:
+    - echo ${CI_JOB_TOKEN}
     - source ./scripts/ci_cd/setup_npm.sh
     - git config --global http.sslCAinfo $IAV_CA_BUNDLE
     - |
