--- a/.releaserc
+++ b/.releaserc
@@ -1,4 +1,16 @@
 {
-    "branches": ["master", "develop"],
-    "extends": "@semantic-release/gitlab-config"
+  "branches": ["master", "develop"],
+  "plugins": [
+    "@semantic-release/commit-analyzer",
+    "@semantic-release/release-notes-generator",
+    "@semantic-release/gitlab",
+    "@semantic-release/npm",
+    [
+      "@semantic-release/git",
+      {
+        "assets": ["package.json"],
+        "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+      }
+    ]
+  ]
 }
