--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -67,8 +67,8 @@ publish_package:
   variables:
     SSL_CERT_FILE: ${IAV_CA_BUNDLE}
     NPM_TOKEN: ${CI_JOB_TOKEN}
-    NODE_EXTRA_CA_CERTS: ${IAV_CA_BUNDLE}
   script:
+    - git config --global http.sslCAinfo $IAV_CA_BUNDLE
     - |
       {
         npm run semantic-release
