--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -67,6 +67,7 @@ publish_package:
     NPM_TOKEN: ${CI_JOB_TOKEN}
   script:
     - git config --global http.sslCAinfo $IAV_CA_BUNDLE
+    - npm config set cafile $IAV_CA_BUNDLE
     - |
       {
         npm run semantic-release
