--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,7 +38,7 @@ create_npmrc:
       if [[ ! -f .npmrc ]]; then
         echo 'No .npmrc found! Creating one now. Please review the following link for more information: https://docs.gitlab.com/ee/user/packages/npm_registry/index.html#authenticating-with-a-ci-job-token'
         {
-          echo "@${CI_PROJECT_ROOT_NAMESPACE}:registry=${CI_SERVER_PROTOCOL}://${$CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/npm/"
+          echo "@${CI_PROJECT_ROOT_NAMESPACE}:registry=${$CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/npm/"
           echo "${$CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/npm/:_authToken=${CI_JOB_TOKEN}"
         } >> .npmrc
       fi
