--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,7 +39,7 @@ create_npmrc:
         echo 'No .npmrc found! Creating one now. Please review the following link for more information: https://docs.gitlab.com/ee/user/packages/npm_registry/index.html#authenticating-with-a-ci-job-token'
         {
           echo "@${CI_PROJECT_ROOT_NAMESPACE}:registry=${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/npm/"
-          echo "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/npm/:_authToken=dsBcFVrsb-1ipuVAsSBi"
+          echo "//gitlab.iavgroup.local/api/v4/projects/8537/packages/npm/:_authToken=dsBcFVrsb-1ipuVAsSBi"
         } >> .npmrc
       fi
   artifacts:
