--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,7 +56,7 @@ create_npmrc:
 
 # Builds the framework
 install_and_build_package:
-  stage: intall_and_build
+  stage: install_and_build
   script:
     - npm install --only=dev
     - npm run build-linux
