--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -73,15 +73,16 @@ publish_package:
   variables:
     SSL_CERT_FILE: ${IAV_CA_BUNDLE}
   script:
-    - npm config set cafile $IAV_CA_BUNDLE
     - |
       {
         npm publish ./build
-        echo "Successfully published version ${NPM_PACKAGE_VERSION} of ${NPM_PACKAGE_NAME} to GitLab's NPM registry: ${CI_PROJECT_URL}/-/packages"
-      } || {
-        echo "No new version of ${NPM_PACKAGE_NAME} published. This is most likely because version ${NPM_PACKAGE_VERSION} already exists in GitLab's NPM registry."
-        exit 1
-      }
+        if [[ $? == 0 ]]; then
+          echo "Successfully published version ${NPM_PACKAGE_VERSION} of ${NPM_PACKAGE_NAME} to GitLab's NPM registry of project: ${REPO_PROJECT_ID}/-/packages"
+        else
+          echo "No new version of ${NPM_PACKAGE_NAME} published. This is most likely because version ${NPM_PACKAGE_VERSION} already exists in GitLab's NPM registry."
+          exit $?
+        fi
+        }
   rules:
     - if: '$CI_COMMIT_BRANCH == "develop"'
 
