--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,7 @@ validate_package_scope:
       fi
     - |
       if [[ ! $NPM_PACKAGE_NAME =~ ^@$REPO_ROOT_NAMESPACE/ ]]; then
-        echo "Invalid package scope! Packages must be scoped in the root namespace of the project, e.g. \"@${REPO_ROOT_NAMESPACE}""
+        echo "Invalid package scope! Packages must be scoped in the root namespace of the project, e.g. \"@${REPO_ROOT_NAMESPACE}"
         echo 'For more information, see https://docs.gitlab.com/ee/user/packages/npm_registry/#package-naming-convention'
         exit 1
       fi
