--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -91,11 +91,11 @@ create_release:
   stage: release
   variables:
     SSL_CERT_FILE: ${IAV_CA_BUNDLE}
-  image: registry.gitlab.com/gitlab-org/release-cli:v0.6.0
+  image: registry.gitlab.com/gitlab-org/release-cli:latest
   script:
     - apk add --update npm
   release:
     tag_name: v${NPM_PACKAGE_VERSION}
-    description: ./scripts/ci_cd/release_notes/$(node -p "require('./package.json').version").md
+    description: ./scripts/ci_cd/release_notes/${NPM_PACKAGE_VERSION}.md
   rules:
     - if: '$CI_COMMIT_BRANCH == "develop"'
