--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -91,6 +91,8 @@ create_release:
   stage: release
   variables:
     SSL_CERT_FILE: ${IAV_CA_BUNDLE}
+    HTTP_PROXY: ${HTTP_PROXY}
+    HTTPS_PROXY: ${HTTPS_PROXY}
   image: registry.gitlab.com/gitlab-org/release-cli:latest
   script:
     - apk add --update npm
