--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -105,7 +105,7 @@ create_release:
     SSL_CERT_FILE: ${IAV_CA_BUNDLE}
   script:
     - >
-      release-cli --project-id 9609 create --description ./scripts/ci_cd/release_notes/${NPM_PACKAGE_VERSION}.md
+      release-cli --project-id 9609 create --description "THIS IS A TEST"
       --tag-name v${NPM_PACKAGE_VERSION}
   rules:
     - if: '$CI_COMMIT_BRANCH == "develop"'
