--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,18 +18,27 @@ generate_env_variables:
     reports:
       dotenv: build.env
 
+generate_package_json:
+  stage: prepare
+  script:
+    - package_json=$(<package.json)
+    - SCOPE=$REPO_ROOT_NAMESPACE echo package_json >> package.json
+  artifacts:
+    paths:
+      - package.json
+      
 # Validate that the package name is properly scoped to the project's root namespace.
 # For more information, see https://docs.gitlab.com/ee/user/packages/npm_registry/#package-naming-convention
 validate_package_scope:
   stage: validate
   script:
-    - |
+    - >
       if [[ ! -f package.json ]]; then
         echo "No package.json found! A package.json file is required to publish a package to GitLab's NPM registry."
         echo 'For more information, see https://docs.gitlab.com/ee/user/packages/npm_registry/#creating-a-project'
         exit 1
       fi
-    - |
+    - >
       if [[ ! $NPM_PACKAGE_NAME =~ ^@$REPO_ROOT_NAMESPACE/ ]]; then
         echo "Invalid package scope! Packages must be scoped in the root namespace of the project, e.g. \"@${REPO_ROOT_NAMESPACE}"
         echo 'For more information, see https://docs.gitlab.com/ee/user/packages/npm_registry/#package-naming-convention'
