--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ generate_package_json:
     - SCOPE=$REPO_ROOT_NAMESPACE echo package_json >> package2.json
   artifacts:
     paths:
-      - package.json
+      - package2.json
       
 # Validate that the package name is properly scoped to the project's root namespace.
 # For more information, see https://docs.gitlab.com/ee/user/packages/npm_registry/#package-naming-convention
