--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,19 +21,7 @@ generate_env_variables:
 generate_package_json:
   stage: prepare
   script:
-    - >
-      {
-        const fs = require("fs");
-        fs.readFile("./package.json", (err, data) => {
-            if (err) throw err;
-            let packageJsonObj = JSON.parse(data);
-            packageJsonObj.name = "abc/" + packageJsonObj.name;
-            fs.writeFile("./package.json", JSON.stringify(packageJsonObj), (err) => {
-                if (err) throw err;
-                  console.log("The file has been saved!");
-            });
-        });
-      }
+    - node ./scripts/ci_cd/build_package_json.js
   artifacts:
     paths:
       - package.json
