--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -73,9 +73,10 @@ install_and_build_package:
 # will fail and the existing package will not be updated.
 publish_package:
   stage: publish
+  variables:
+    NODE_EXTRA_CA_CERTS: ${IAV_CA_BUNDLE}
   script:
     - source ./scripts/ci_cd/configure_npm.sh
-    - npm config set cafile $IAV_CA_BUNDLE
     - >
       {
         npm publish ./build
