--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,7 +44,7 @@ validate_typescript:
   variables:
     NODE_EXTRA_CA_CERTS: ${IAV_CA_BUNDLE}
   script:
-    - source ./scripts/ci_cd/configure_npm.sh
+    - sh ./scripts/ci_cd/configure_npm.sh
     - npm install -D
     - npx tsc --noEmit --emitDeclarationOnly false
   except:
@@ -54,7 +54,7 @@ validate_typescript:
 build_package:
   stage: build
   script:
-    - source ./scripts/ci_cd/configure_npm.sh
+    - sh ./scripts/ci_cd/configure_npm.sh
     - npm install -D
     - npm run build-linux
   artifacts:
@@ -71,7 +71,7 @@ publish_package:
   variables:
     NODE_EXTRA_CA_CERTS: ${IAV_CA_BUNDLE}
   script:
-    - source ./scripts/ci_cd/configure_npm.sh
+    - sh ./scripts/ci_cd/configure_npm.sh
     - npm install -D
     - >
       {
