--- a/package.json
+++ b/package.json
@@ -48,9 +48,10 @@
     "react-i18next": "^11.11.4"
   },
   "peerDependencies": {
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
     "react-transition-group": "^4.4.1"
   },
   "devDependencies": {
@@ -61,9 +62,8 @@
     "@babel/preset-typescript": "^7.12.1",
     "@types/lodash": "^4.14.168",
     "@types/node": "^12.20.7",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.3",
-    "@types/react-router-dom": "^5.1.7",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
     "aws-amplify": "^4.3.12",
     "react-scripts": "^5.0.0",
     "typescript": "^4.5.5"
